<resources>
    <string name="app_name">Log Book System</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="FullName">Full Name</string>
    <string name="email">Email</string>
    <string name="loginhere">Login Here</string>
    <string name="SignUpHere">Sign Up Here</string>
    <string name="welcome">Welcome</string>
    <string name="AddNewVehicle">Add New Vehicle</string>
    <string name="ImageLink">Image Link</string>
    <string name="Model">Model</string>
    <string name="Registern">Register Number</string>
    <string name="Department">Department</string>
    <string name="Add">ADD</string>
    <string name="brand">Brand</string>
    <string name="AddNewEntry">Add New Entry</string>
    <string name="TimePicker">SELECT TIME</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
</resources>